# rust_templates

./: LICENSE  README.md
.github/workflows/: quickstart-everything.yml.disabled
cli/: Cargo.toml  Dockerfile  how-to-use.md
cli/benches/: perf.rs
cli/examples/: add_example.rs
cli/src/lib/: foobar.rs  lib.rs  mainlib.rs
cli/tests/: test_main.rs  test_mainlib.rs
lib/: Cargo.toml
lib/src/: functions.rs
lib/tests/: test_functions.rs
service/: Cargo.toml  Dockerfile
service/src/lib/: lib.rs
