[package]
name = "cli"
version = "0.0.1"
edition = "2021"
authors = [ "addyourname@here.com" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[lib]
name = "lib_cli"
path = "src/lib/lib.rs"
test = true
doctest = false
bench = false
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["rlib"]
required-features = []