[package]
name = "your_cli_project_name" # TODO: replace it with your project name
version = "0.0.1" # TODO: replace it with your project name
edition = "2021"
authors = [ "add_your_name@here.com" ] # TODO: replace it with your email address

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[[bin]]
name = "cli" # TODO: replace it with your executable name
path = "src/bin/main.rs"

[lib]
name = "lib_cli" # TODO: replace it with your library name
path = "src/lib/lib.rs"
test = true
doctest = false
bench = false
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["rlib"]
required-features = []
